<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">

        <!--<item
            android:id="@+id/nav_customize"
            android:icon="@drawable/ic_customize"
            android:title="Customize Top Feeds" />-->

        <item
            android:id="@+id/nav_subs"
            android:icon="@drawable/ic_subs"
            android:title="@string/manage_subscriptions" />


        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_alert"
            android:title="@string/manage_alerts" />


        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/advanced_search" />


    </group>

    <group
        android:id="@+id/group_3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />


    </group>


    <group
        android:id="@+id/group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />

    </group>
</menu>